--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Keywords" content="" />
-  <meta name="Description" content="" />
+  <meta name="Keywords" content="歌手、專輯、PATRICK" />
+  <meta name="Description" content="人生中遇到的美景，用六首作品紀錄下人生的三分之一，" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>PATRICK 人生中遇到的美景</title>
   <link tpye="text/css" rel='stylesheet'
     href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css' />
   <link tpye="text/css" rel="stylesheet" href="css/all.css">
