--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </p>
       <!-- moon modal-->
       <div class="moon__modal fade_up">
-        <p class="moon__modal--text">點擊月亮看看吧!</p>
+        <p class="moon__modal--text">點擊月亮會有小驚喜哦!</p>
         <div class="moon__modal--btn modal1" data-toggle="modal" data-target="#moon1"><img src="img/moon1.png"></div>
         <div class="moon__modal--btn modal2" data-toggle="modal" data-target="#moon2"><img src="img/moon2.png"></div>
         <div class="moon__modal--btn modal3" data-toggle="modal" data-target="#moon3"><img src="img/moon3.png"></div>
