--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="Description" content="人生中遇到的美景，用六首作品紀錄下人生的三分之一" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PATRICK 人生中遇到的美景</title>
-  <link tpye="text/css" rel='stylesheet'
-    href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css' />
+  <link tpye="text/css" rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css'
+  />
   <link tpye="text/css" rel="stylesheet" href="css/all.css">
 
 </head>
@@ -51,30 +51,26 @@
     <!-- END section1 -->
     <section class="section2">
       <!-- describe1 -->
-      <p class="section2__describe1 fade_up"><span class="first-quote">“</span>嗨，歡迎來到阿斑的腦內空間。<br>
-        這裡藏有連結現實世界的通道，<br>
-        期望能與你一同探究。<span class="last-quote">”</span></p>
+      <p class="section2__describe1 fade_up"><span class="first-quote">“</span>嗨，歡迎來到阿斑的腦內空間。<br> 這裡藏有連結現實世界的通道，
+        <br> 期望能與你一同探究。
+        <span class="last-quote">”</span></p>
       <!-- circle1 -->
       <svg id="circle1" viewBox="0 0 720 500" xmlns="http://www.w3.org/2000/svg">
-        <path id="s1state1"
-          d="M543.57,94.85c-49.39-34.13-134-29.42-176.32,16.23-25.74,27.73-55,27.06-55,27.06C199.86,139.19,108.41,222.67,132.18,313c5,18.91,15,38.12,30.95,56.94,93.38,110.22,260.19,40.57,312.36-48.56,22.16-37.87,78.11-35.89,101.25-83.5C603.34,183.16,594.62,130.12,543.57,94.85Z"
+        <path id="s1state1" d="M543.57,94.85c-49.39-34.13-134-29.42-176.32,16.23-25.74,27.73-55,27.06-55,27.06C199.86,139.19,108.41,222.67,132.18,313c5,18.91,15,38.12,30.95,56.94,93.38,110.22,260.19,40.57,312.36-48.56,22.16-37.87,78.11-35.89,101.25-83.5C603.34,183.16,594.62,130.12,543.57,94.85Z"
           fill-rule="nonzero" fill="#fff" opacity="0.2" />
-        <path id="s1state2" opacity="0"
-          d="M476.07,133.7c-49.39-34.13-57-47-140-57-37.56-4.53-119,5-119,5-112.4,1-92.77,72.67-69,163,5,18.91,19.05,83.18,35,102,93.38,110.21,275.82,139.13,328,50,22.16-37.87,3.85-51.39,27-99C564.67,243,527.12,169,476.07,133.7Z"
+        <path id="s1state2" opacity="0" d="M476.07,133.7c-49.39-34.13-57-47-140-57-37.56-4.53-119,5-119,5-112.4,1-92.77,72.67-69,163,5,18.91,19.05,83.18,35,102,93.38,110.21,275.82,139.13,328,50,22.16-37.87,3.85-51.39,27-99C564.67,243,527.12,169,476.07,133.7Z"
           fill-rule="nonzero" fill="#fff" />
       </svg>
       <!-- circle2 -->
       <svg id="circle2" viewBox="0 0 720 500" xmlns="http://www.w3.org/2000/svg">
-        <path id="s2state1"
-          d="M338,205.19c-41.65-.56-52.68,43.63-52.68,43.63-4.19,19.06-6.51,39.86,31.25,66.17,37,25.82,92.33-1.61,94.24-40.64S376.79,205.72,338,205.19Z"
+        <path id="s2state1" d="M338,205.19c-41.65-.56-52.68,43.63-52.68,43.63-4.19,19.06-6.51,39.86,31.25,66.17,37,25.82,92.33-1.61,94.24-40.64S376.79,205.72,338,205.19Z"
           fill-rule="nonzero" fill="#fff" opacity="0.2" />
-        <path id="s2state2" opacity="0"
-          d="M352.35,195.44c-41.65-.77-66,72-66,72-4.19,19.06,4.12,63.4,50,67,51,4,36.26-25.52,58-58C409.62,253.63,391.06,196.16,352.35,195.44Z"
+        <path id="s2state2" opacity="0" d="M352.35,195.44c-41.65-.77-66,72-66,72-4.19,19.06,4.12,63.4,50,67,51,4,36.26-25.52,58-58C409.62,253.63,391.06,196.16,352.35,195.44Z"
           fill-rule="nonzero" fill="#fff" />
       </svg>
       <!-- wave -->
-      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        viewBox="0 0 150 100" preserveAspectRatio="none" shape-rendering="auto">
+      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 100" preserveAspectRatio="none"
+        shape-rendering="auto">
         <defs>
           <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18" />
         </defs>
@@ -89,15 +85,14 @@
       </svg>
       <!-- describe2 -->
       <p class="section2__describe2 fade_up">
-        人生像個圓形時區，<br>
-        愛情一部分、生活一部分、家庭一部分。<br>
-        隨著日月升起、星辰殞落，<br>
-        歲月推進不同的時區，<br>
-        會遇上不同的人，有著有不同的故事。<br><br>
-        開心難過、起飛降落，<br>
-        乘著全新的心境，<br>
-        做好準備邁向下一個時區。<br>
-        而你，準備好了嗎？
+        人生像個圓形時區，<br> 愛情一部分、生活一部分、家庭一部分。
+        <br> 隨著日月升起、星辰殞落，
+        <br> 歲月推進不同的時區，
+        <br> 會遇上不同的人，有著有不同的故事。
+        <br><br> 開心難過、起飛降落，
+        <br> 乘著全新的心境，
+        <br> 做好準備邁向下一個時區。
+        <br> 而你，準備好了嗎？
       </p>
       <img class="cloud4 fade_right" src="img/cloud4.png">
       <img class="cloud5 fade_left" src="img/cloud5.png">
@@ -105,13 +100,12 @@
     <!-- END section2 -->
     <section class="section3">
       <div class="section3__line1">
-        <svg id="line1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 720 130"></svg>
+        <svg id="line1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 720 145"></svg>
       </div>
       <img class="section3__title fade_up" src="img/section3_title.png" alt="與你分享生活中的每段風景 來場屬於我們的回憶 ">
-      <p class="section3__describe fade_up">用六首作品紀錄下人生的三分之一，<br>
-        寫下專屬的溫度與故事，<br>
-        而你將會是新的篇章。<br><br>
-        現在，我想邀請你一起重溫故事的細節。
+      <p class="section3__describe fade_up">用六首作品紀錄下人生的三分之一，<br> 寫下專屬的溫度與故事，
+        <br> 而你將會是新的篇章。
+        <br><br> 現在，我想邀請你一起重溫故事的細節。
       </p>
       <!-- moon modal-->
       <div class="moon__modal fade_up">
@@ -129,17 +123,15 @@
       <div class="section4__line2 ">
         <svg id="line2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 720 70"></svg>
       </div>
-      <p class="section4__describe1 fade_up">接下來我會開啟現實與網路連結的通道，<br>
-        地點會在台北的某個角落，<br>
-        在那天，我們可以一起唱唱歌、聊聊天；<br>
-        我們可以有一些互動，就像朋友一般；<br>
-        最重要的是，<br>
-        我們可以一起沉浸在音樂裡，享受一段愜意的時光。
+      <p class="section4__describe1 fade_up">接下來我會開啟現實與網路連結的通道，<br> 地點會在台北的某個角落，
+        <br> 在那天，我們可以一起唱唱歌、聊聊天；
+        <br> 我們可以有一些互動，就像朋友一般；
+        <br> 最重要的是，
+        <br> 我們可以一起沉浸在音樂裡，享受一段愜意的時光。
       </p>
       <img class="section4__title fade_up" src="img/section4_title.png">
       <p class="section4__describe2 fade_up">
-        活動每場限定25人，歡迎報名填寫呦!<br>
-        期待與你相見的那一天！
+        活動每場限定25人，歡迎報名填寫呦!<br> 期待與你相見的那一天！
       </p>
       <!-- 表單 -->
       <div class="form" id="goactive">
@@ -177,11 +169,11 @@
         </div>
         <div class="modal-body">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/CUDCLCuM4Dk" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CUDCLCuM4Dk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
           </div>
-          <p>太多的謊言踐踏真誠，讓人與人之間的信任回到原點，努力的掙扎向前，不進反退又換來一身傷痕。
-            被傷透後選擇封閉內心，拒絕接受外在的一切目光，逃避會讓自己受傷的一切，最後選擇關起門來，自己療傷。</p>
+          <p>太多的謊言踐踏真誠，讓人與人之間的信任回到原點，努力的掙扎向前，不進反退又換來一身傷痕。 被傷透後選擇封閉內心，拒絕接受外在的一切目光，逃避會讓自己受傷的一切，最後選擇關起門來，自己療傷。
+          </p>
         </div>
       </div>
     </div>
@@ -198,11 +190,11 @@
         </div>
         <div class="modal-body">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/o7a_99Y1lTw" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/o7a_99Y1lTw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
           </div>
-          <p>遇見妳，是我的起點。<br>
-            在遇見妳之前，我是無根的浮萍，世界的物換星移都是過客；與妳相遇後，每一秒都值得眷戀，只要牽妳的手，時間便有了存在的意義。生活恬淡，歲月靜好，想在陽光灑落的午後，靜靜地和妳走慢時光。</p>
+          <p>遇見妳，是我的起點。<br> 在遇見妳之前，我是無根的浮萍，世界的物換星移都是過客；與妳相遇後，每一秒都值得眷戀，只要牽妳的手，時間便有了存在的意義。生活恬淡，歲月靜好，想在陽光灑落的午後，靜靜地和妳走慢時光。
+          </p>
         </div>
       </div>
     </div>
@@ -219,11 +211,11 @@
         </div>
         <div class="modal-body">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8dFJJo0G4_M" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8dFJJo0G4_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
           </div>
-          <p>想妳、牽妳、擁抱妳，都是為了讓妳懂得。<br>
-            愛情就像童話故事，情節讓人甜膩沉迷，妳的一舉一動、一顰一笑都是甜蜜夢幻的美好，想要整個世界都是妳。想起妳的模樣會偷笑、決定與妳廝守到老，在執子之手的時光裡，想好好擁抱妳，讓妳知道。</p>
+          <p>想妳、牽妳、擁抱妳，都是為了讓妳懂得。<br> 愛情就像童話故事，情節讓人甜膩沉迷，妳的一舉一動、一顰一笑都是甜蜜夢幻的美好，想要整個世界都是妳。想起妳的模樣會偷笑、決定與妳廝守到老，在執子之手的時光裡，想好好擁抱妳，讓妳知道。
+          </p>
         </div>
       </div>
     </div>
@@ -240,8 +232,8 @@
         </div>
         <div class="modal-body">
           <img src="img/modal-4.png">
-          <p>在一起需要兩人點頭，分手卻只要一人同意。<br>
-            一起歡笑的日常都收在腦海裡，過去的點滴依附在照片訊息，剩我用難過一一清點，醉倒空蕩的房間角落。失去妳，世界有了缺口，任憑我自己無助地回頭。妳的淚像是催淚瓦斯，擋下我想重溫往日的腳步。</p>
+          <p>在一起需要兩人點頭，分手卻只要一人同意。<br> 一起歡笑的日常都收在腦海裡，過去的點滴依附在照片訊息，剩我用難過一一清點，醉倒空蕩的房間角落。失去妳，世界有了缺口，任憑我自己無助地回頭。妳的淚像是催淚瓦斯，擋下我想重溫往日的腳步。
+          </p>
         </div>
       </div>
     </div>
@@ -258,8 +250,8 @@
         </div>
         <div class="modal-body">
           <img src="img/modal-5.png">
-          <p>走不出迴圈，或許是遵循了錯誤的解答。<br>
-            試著在失戀後找到出口，藉著思念排解受傷後的空虛寂寞。我徘徊在回憶的交叉路口，尋找著蛛絲馬跡想找到盡頭，卻發現走不出迴圈。原來不是我被丟棄在迷宮，原來是妳的謊指引了錯誤方向。</p>
+          <p>走不出迴圈，或許是遵循了錯誤的解答。<br> 試著在失戀後找到出口，藉著思念排解受傷後的空虛寂寞。我徘徊在回憶的交叉路口，尋找著蛛絲馬跡想找到盡頭，卻發現走不出迴圈。原來不是我被丟棄在迷宮，原來是妳的謊指引了錯誤方向。
+          </p>
         </div>
       </div>
     </div>
@@ -276,11 +268,11 @@
         </div>
         <div class="modal-body">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wKTj0HIb_vk" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wKTj0HIb_vk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
           </div>
-          <p>感謝自己，讓我能夠走到這裡。<br>
-            擦肩而過的人事物都濃縮成一張薄紙，深刻的都留在回憶。世界上有太多坎坷，一路走來遇到太多曲折，縱使曾經迷途手足無措，路上受過的傷都是成長的痕跡，回頭望去，感謝色彩濃重的每一筆回憶。</p>
+          <p>感謝自己，讓我能夠走到這裡。<br> 擦肩而過的人事物都濃縮成一張薄紙，深刻的都留在回憶。世界上有太多坎坷，一路走來遇到太多曲折，縱使曾經迷途手足無措，路上受過的傷都是成長的痕跡，回頭望去，感謝色彩濃重的每一筆回憶。
+          </p>
         </div>
       </div>
     </div>
@@ -296,8 +288,8 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>感謝您的參與。<br>報名完成通過審核後，活動時間地點等詳情將透過E-mail通知，
-            如有任何歡迎來信至lulu@banfubi.com詢問</p>
+          <p>感謝您的參與。<br>報名完成通過審核後，活動時間地點等詳情將透過E-mail通知， 如有任何歡迎來信至lulu@banfubi.com詢問
+          </p>
         </div>
       </div>
     </div>
