--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>PATRICK 人生中遇到的美景</title>
   <link tpye="text/css" rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css'
   />
-  <link tpye="text/css" rel="stylesheet" href="css/all.css">
+  <link tpye="text/css" rel="stylesheet" href="css/allv2.css">
 
 </head>
 
@@ -88,7 +88,7 @@
         人生像個圓形時區，<br> 愛情一部分、生活一部分、家庭一部分。
         <br> 隨著日月升起、星辰殞落，
         <br> 歲月推進不同的時區，
-        <br> 會遇上不同的人，有著有不同的故事。
+        <br> 會遇上不同的人，有著不同的故事。
         <br><br> 開心難過、起飛降落，
         <br> 乘著全新的心境，
         <br> 做好準備邁向下一個時區。
